# lightning-enable-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  glama.json  server.json  smithery.yaml
.claude/skills/mcp-publish-prep/: SKILL.md
.claude/skills/new-mcp-tool/: SKILL.md
.claude/skills/strike-banking/: SKILL.md
.github/workflows/: codeql.yml  gitleaks.yml  publish-mcp.yml  semgrep.yml  test.yml
dotnet/: LightningEnable.Mcp.sln
dotnet/src/LightningEnable.Mcp/: LICENSE.txt  LightningEnable.Mcp.csproj  Program.cs  README.md
dotnet/src/LightningEnable.Mcp/Models/: BudgetConfig.cs  L402ClientChallenge.cs  NwcConfig.cs  PaymentRecord.cs  PendingConfirmation.cs  ProviderResults.cs  StrikeBankingModels.cs  UserBudgetConfiguration.cs
dotnet/src/LightningEnable.Mcp/Services/: AgentService.cs  Bolt11Parser.cs  BudgetConfigurationService.cs  BudgetService.cs  IBudgetService.cs  IL402HttpClient.cs  ILightningPaymentProvider.cs  IPaymentHistoryService.cs  IStrikeBankingService.cs  IWalletService.cs  L402HttpClient.cs  LightningEnableApiService.cs  LightsparkPaymentProvider.cs  LndWalletService.cs  NwcWalletService.cs  OpenNodeWalletService.cs  PaymentHistoryService.cs  PriceService.cs  RateLimiter.cs  StrikeBankingService.cs  StrikePaymentProvider.cs  StrikeWalletService.cs
dotnet/src/LightningEnable.Mcp/Tools/: AccessL402ResourceTool.cs  AgentAttestationTool.cs  (+28 more)
dotnet/tests/LightningEnable.Mcp.Tests/: LightningEnable.Mcp.Tests.csproj
python/lightning-enable-mcp/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
python/lightning-enable-mcp/src/lightning_enable_mcp/: __init__.py  budget.py  budget_service.py  config.py  l402_client.py  lightning_enable_api.py  lnd_wallet.py  nwc_wallet.py  opennode_wallet.py  price_service.py  server.py  strike_wallet.py
python/lightning-enable-mcp/src/lightning_enable_mcp/tools/: __init__.py  access_resource.py  budget.py  budget_status.py  check_invoice_status.py  confirm_payment.py  create_invoice.py  create_l402_challenge.py  discover_api.py  exchange_currency.py  get_all_balances.py  get_btc_price.py  pay_challenge.py  pay_invoice.py  send_onchain.py  verify_l402_payment.py  wallet.py
python/lightning-enable-mcp/tests/: __init__.py  test_budget.py  test_check_invoice_status.py  test_confirm_payment.py  test_create_invoice.py  test_create_l402_challenge.py  test_discover_api.py  test_exchange_currency.py  test_get_all_balances.py  test_get_btc_price.py  test_l402_client.py  test_lightning_enable_api.py  test_lnd_wallet.py  test_mpp_challenge.py  test_nwc_wallet.py  test_pay_challenge.py  test_pay_invoice.py  test_price_service.py  test_security_audit.py  test_security_f11_f12.py  test_send_onchain.py  test_server.py  test_verify_l402_payment.py
(+17 files in other folders)
