[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightning-enable-mcp"
version = "1.6.2"
description = "MCP server for L402 Lightning payments - access paid APIs with AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lightning Enable", email = "support@lightningenable.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "lightning",
    "bitcoin",
    "l402",
    "lsat",
    "payments",
    "ai",
    "agents",
    "nostr",
    "nwc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "bolt11>=2.0.0",
    "secp256k1>=0.14.0",
    "websockets>=12.0",
    "bech32>=1.2.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://lightningenable.com"
Documentation = "https://github.com/refined-element/lightning-enable-mcp"
Repository = "https://github.com/refined-element/lightning-enable-mcp"
Issues = "https://github.com/refined-element/lightning-enable-mcp/issues"

[project.scripts]
lightning-enable-mcp = "lightning_enable_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lightning_enable_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=lightning_enable_mcp --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["lightning_enable_mcp"]
